k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techeval-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: techeval-app
  template:
    metadata:
      labels:
        app: techeval-app
    spec:
      serviceAccountName: techeval-sa
      containers:
        - name: techeval-app
          image: 730038224500.dkr.ecr.us-east-1.amazonaws.com/techeval-app:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
