k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techeval-app
  namespace: default
spec:
  selector:
    app: techeval-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
